[gd_scene load_steps=5 format=2]

[ext_resource path="res://GFX/Characters/Ground_Enemies/Regular.png" type="Texture" id=1]
[ext_resource path="res://Characters/TemplateCharacter.tscn" type="PackedScene" id=2]
[ext_resource path="res://Characters/Enemies/Ground_Enemies/Regular.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14.1, 29.1 )

[node name="Regular" instance=ExtResource( 2 )]
collision_layer = 4
collision_mask = 51
script = ExtResource( 3 )

[node name="Sprite" parent="." index="0"]
texture = ExtResource( 1 )

[node name="Timer" type="Timer" parent="." index="2"]
one_shot = true

[node name="Area2D" type="Area2D" parent="." index="3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]
shape = SubResource( 1 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
